# xzkd-static

./: .gitignore  CNAME  README.md  bus_data.json  bus_data_v3.json  curriculum.py  feed_source.json  geo_data.json  geo_data_export.json  geo_data_handle.py  geo_data_tmp.json  main.py  pyproject.toml  requirements.txt  rss-config.yaml  rss.py  test.ipynb
.github/workflows/: build.yml
api/course/: 100003  100005  100006  100007  100009  100010  100013  100014  100016  100017  100019  100020  100021  100025  100026  100027  100030  100031  100032  100033  100034  100036  100037  100039  100041  100042  100044  100045  100046  100052  100055  100058  100062  100066  100067  100068  100069  100071  100072  100074  (+44102 more)
curriculum/: semesters.json
curriculum/101/: 120155.json  120158.json  120161.json  120162.json  120165.json  120168.json  120169.json  120183.json  120185.json  120186.json  120187.json  120190.json  120196.json  120198.json  120201.json  120208.json  120210.json  120212.json  120217.json  120219.json  (+15 more)
models/: __init__.py  course.py  exam.py  lecture.py  semester.py
rss/: life_at_ustc.xml  mp_ustc_graduate_student_union.xml  mp_ustc_main.xml  mp_ustc_sgy.xml  mp_ustc_undergraduate_admission_office.xml  mp_ustc_undergraduate_student_union.xml  mp_ustc_youth_league_committee.xml  tj_ustc.xml  ustc_news.xml  ustc_teach.xml  xzkd.xml
static/: building_img_rules.json  bus_data_v2.json  bus_data_v3.json  feed_source.json  geo_data.json
tools/: dev.ipynb  webhook.rb
utils/: auth.py  cas.py  catalog.py  constants.py  environs.py  jw.py  tj_rss.py  tools.py
(+44142 files in other folders)
